Modification style des boutons

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -37,7 +37,7 @@
       {% if hideInscription is not defined %}
       <a href="{{ url('flair_user_inscription_organisme') }}" class="btn btn-warning">S'inscrire</a>
       {% endif %}
-      <a href="{{ url('login') }}" class="btn btn-default">Se connecter</a>
+      <a href="{{ url('login') }}" class="btn orange">Se connecter</a>
       {% endif %}
     </div>
 
