--- a/src/Flair/UserBundle/Resources/views/Invitation/inviter.html.twig
+++ b/src/Flair/UserBundle/Resources/views/Invitation/inviter.html.twig
@@ -20,12 +20,12 @@
           </div>
       </div>
     <div class="col-lg-6">
+    <span class="required">* Champs obligatoires</span>
     <form action="{{ url('flair_user_invitation_send') }}" method="POST" class="form-horizontal">
         {{ form_rest(form) }}
 
         <div class="controls">
             <input type="submit" value="Inviter" class="btn orange" />
-            <a onClick="window.history.go(-1);" class="btn">Annuler</a>
         </div>
     </form>
     </div>
