Modification style des pages du compte

--- a/src/Flair/OrganismeBundle/Resources/views/Consultations/creation/etape1.html.twig
+++ b/src/Flair/OrganismeBundle/Resources/views/Consultations/creation/etape1.html.twig
@@ -88,7 +88,7 @@
 
 
             <div class="actions">
-                <input class="btn js_draft" name="brouillon" type="submit" value="Enregistrer en brouillon"/>
+                <input class="btn btn-warning js_draft" name="brouillon" type="submit" value="Enregistrer en brouillon"/>
                 <input class="btn orange next" name="publier" type="submit" value="Suivant" />
             </div>
         </form>
