--- a/src/Flair/OrganismeBundle/Resources/views/Consultations/creation/etape3.html.twig
+++ b/src/Flair/OrganismeBundle/Resources/views/Consultations/creation/etape3.html.twig
@@ -76,7 +76,7 @@
 
                 <div class="actions">
                     <input class="btn js_draft" name="brouillon" type="submit" value="Enregistrer en brouillon"/>
-                    <a href="{{ url('Organisme_consultation_publier', {'id' : consultation.id } ) }}" class="next btn orange">Publier</a>
+                    <a href="{{ url('Organisme_consultation_publier', {'id' : consultation.id } ) }}" class="next btn btn-warning">Publier</a>
                 </div>
             </form>
         </div>
