--- a/src/Flair/UserBundle/Resources/views/Invitation/lister.html.twig
+++ b/src/Flair/UserBundle/Resources/views/Invitation/lister.html.twig
@@ -14,6 +14,7 @@
                 <i class="fa fa-undo"></i>
                     Annuler
                 </a>
+                                | <a href="{{ url('flair_user_invitation_list') }}"><i class="fa fa-user-plus"></i>  Invitations</a>
                   <div class="corner"></div>
                 </div>
             </ol>
