--- a/src/Flair/UserBundle/Resources/views/Profil/popup_modify.html.twig
+++ b/src/Flair/UserBundle/Resources/views/Profil/popup_modify.html.twig
@@ -8,8 +8,8 @@
 			<div class="conseils">
 				{{ utilisateur.nom }}, pour optimiser votre référencement et mise en relation de qualité, veuillez compléter votre profil dans la partie « mon compte ».
 			</div>
-			<a style="width: 150px;" class="btn orange next" id="noShow">Ne plus m'avertir</a>
-			<a style="width: 150px;" class="btn orange next" href="{{ url('flair_user_profil_edit') }}">Je complète mon profil</a>
+			<a style="width: 150px;" class="btn" id="noShow">Ne plus m'avertir</a>
+			<a style="width: 163px;" class="btn btn-warning" href="{{ url('flair_user_profil_edit') }}">Je complète mon profil</a>
 			<div class="progression"></div>
 			<div class="close">x</div>
 		</div>
