Modification stylepage compte prestataire

--- a/src/Flair/CoreBundle/Resources/assets/less/flashes.less
+++ b/src/Flair/CoreBundle/Resources/assets/less/flashes.less
@@ -1,4 +1,4 @@
-/* Flashes */
+/* Flashes
 .flash {
     padding: 8px 15px;
     margin-bottom: 20px;
@@ -38,3 +38,4 @@
 .no-close .ui-dialog-titlebar-close {
     display: none;
 }
+*/
