--- a/src/Flair/PrestataireBundle/Resources/views/Profil/afficher.html.twig
+++ b/src/Flair/PrestataireBundle/Resources/views/Profil/afficher.html.twig
@@ -12,11 +12,11 @@
               <li class="active">Mon compte</li>
 
               <div class="btn-bar" style="float:right">
-                  <a href="{{ url('flair_user_profil_edit') }}"><i class="fa fa-pencil"></i> |
+                  <a href="{{ url('flair_user_profil_edit') }}"><i class="fa fa-pencil"></i> 
    Modifier</a>
-                  <a href="{{ url('flair_user_profil_password') }}"><i class="fa fa-lock"></i> |
+                | <a href="{{ url('flair_user_profil_password') }}"><i class="fa fa-lock"></i>
    Changer mon mot de passe</a>
-                  <a href="{{ url('flair_user_invitation_list') }}"><i class="fa fa-user-plus"></i> | Invitations</a>
+
                   <div class="corner"></div>
               </div>
           </ol>
