--- a/src/Flair/UserBundle/Resources/views/Invitation/inviter.html.twig
+++ b/src/Flair/UserBundle/Resources/views/Invitation/inviter.html.twig
@@ -19,15 +19,24 @@
               </ol>
           </div>
       </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="tableaudebord">
+            <div class="panel panel-info">
+                <div class="panel-title">Inviter un utilisateur <br><span style="font-size:12px"class="required">* Champs obligatoires</div>
+
+              </div>
+            </div>
     <div class="col-lg-6">
-    <span class="required">* Champs obligatoires</span>
     <form action="{{ url('flair_user_invitation_send') }}" method="POST" class="form-horizontal">
         {{ form_rest(form) }}
 
         <div class="controls">
-            <input type="submit" value="Inviter" class="btn orange" />
+            <input type="submit" value="Inviter" class="btn btn-warning" />
         </div>
     </form>
+    </div>
+    </div>
     </div>
 </div>
 {% endblock %}
