--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,6 +17,7 @@
   {% stylesheets '@FlairCoreBundle/Resources/assets/less/layout.less' output = 'css/style.css' %}
   <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}" />
   {% endstylesheets %}
+  <link href="{{ asset('css/jquery.dataTables.min.css') }}"  rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{{ asset('css/bootstrap.min.css') }}">
 
   <link rel="stylesheet" type="text/css" href="{{ asset('css/style.css') }}">
@@ -99,6 +100,38 @@
 '@FlairCoreBundle/Resources/assets/coffee/categories.coffee'
 %}
 <script type="text/javascript" src="{{ asset_url }}"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+  $('#myTable').DataTable({
+
+  "language": {
+
+  "sProcessing":     "Traitement en cours...",
+  "sSearch":         "Rechercher&nbsp;:",
+    "sLengthMenu":   "Afficher _MENU_ &eacute;l&eacute;ments",
+  "sInfo":           "Affichage de l'&eacute;l&eacute;ment _START_ &agrave; _END_ sur _TOTAL_ &eacute;l&eacute;ments",
+  "sInfoEmpty":      "Affichage de l'&eacute;l&eacute;ment 0 &agrave; 0 sur 0 &eacute;l&eacute;ment",
+  "sInfoFiltered":   "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
+  "sInfoPostFix":    "",
+  "sLoadingRecords": "Chargement en cours...",
+    "sZeroRecords":    "Aucun &eacute;l&eacute;ment &agrave; afficher",
+  "sEmptyTable":     "Aucune donn&eacute;e disponible dans le tableau",
+  "oPaginate": {
+    "sFirst":      "Premier",
+    "sPrevious":   "Pr&eacute;c&eacute;dent",
+    "sNext":       "Suivant",
+    "sLast":       "Dernier"
+  },
+  "oAria": {
+    "sSortAscending":  ": activer pour trier la colonne par ordre croissant",
+    "sSortDescending": ": activer pour trier la colonne par ordre d&eacute;croissant"
+      }
+    }
+
+  })
+
+});
+</script>
 {% endjavascripts %}
 {% endblock %}
 {% block inlineScript %}{% endblock %}
