--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,6 +9,7 @@
         {% stylesheets '@FlairCoreBundle/Resources/assets/less/layout.less' output = 'css/style.css' %}
             <link rel="stylesheet" type="text/css" media="screen" href="{{ asset_url }}" />
         {% endstylesheets %}
+        <!-- <link rel="stylesheet" type="text/css" media="screen" href="{{ asset('css/style.css') }}" /> -->
         <link rel="stylesheet" type="text/css" media="screen" href="{{ asset('stylesheets/select2.min.css') }}" />
         <link rel="stylesheet" type="text/css" media="screen" href="{{ asset('jquery-ui/jquery-ui.min.css') }}" />
         <link rel="stylesheet" type="text/css" href="{{ asset('font-awesome-4.5.0/css/font-awesome.min.css') }}">
