--- a/src/Flair/PrestataireBundle/Resources/views/Questions/poser.html.twig
+++ b/src/Flair/PrestataireBundle/Resources/views/Questions/poser.html.twig
@@ -1,7 +1,27 @@
 {% extends 'FlairPrestataireBundle::propositions.html.twig' %}
 
 {% block body %}
-<div class="inner">
+<div class="container">
+  <div class="row">
+      <div class="col-lg-12">
+          <h1 class="page-header">Mes propositions
+          </h1>
+          <ol class="breadcrumb">
+              <li><a href="{{url('Homepage')}}">Accueil</a></li>
+              <li><a href="{{url('Prestataire_propositions')}}">Mes propositions</a></li>
+              <li class="active">Consultation : {{ reponse.consultation.titre }}</li>
+
+
+              <div class="btn-bar" style="float:right">
+                  <a href="{{ url('Prestataire_propositions') }}">
+                  <i class="fa fa-undo"></i>
+                      Retour à la liste
+                  </a>
+                  <div class="corner"></div>
+              </div>
+          </ol>
+      </div>
+  </div>
 
     <div class="btn-bar right">
         <a href="{{ url('Prestataire_propositions_afficher', {'id' : reponse.id } ) }}" class="btn">retour</a>
