--- a/src/Flair/PrestataireBundle/Resources/views/Reponses/etape2_saisie.html.twig
+++ b/src/Flair/PrestataireBundle/Resources/views/Reponses/etape2_saisie.html.twig
@@ -3,21 +3,27 @@
 {% form_theme form ':form:table_form_theme.html.twig' %}
 
 {% block body %}
-    <div class="inner">
+<div class="container">
+  <div class="row">
+      <div class="col-lg-12">
+          <h1 class="page-header">Mes propositions
+          </h1>
+          <ol class="breadcrumb">
+              <li><a href="{{url('Homepage')}}">Accueil</a></li>
+              <li><a href="{{url('Prestataire_propositions')}}">Mes propositions</a></li>
+              <li class="active">Consultation : {{ reponse.consultation.titre }}</li>
 
-        <div class="title title-table">
-            <h2 class="left-bar">
-                Consultation : {{ reponse.consultation.titre }}
-            </h2>
 
-            <div class="btn-bar right">
-                <a href="{{ url('Prestataire_propositions') }}" class="btn orange no-radius">
-                    Retour à la liste
-                </a>
-                <div class="corner"></div>
-            </div>
-        </div>
-
+              <div class="btn-bar" style="float:right">
+                  <a href="{{ url('Prestataire_propositions') }}">
+                  <i class="fa fa-undo"></i>
+                      Retour à la liste
+                  </a>
+                  <div class="corner"></div>
+              </div>
+          </ol>
+      </div>
+  </div>
         {% include 'FlairPrestataireBundle::menuPrestataire.html.twig' with { 'reponse' : reponse} %}
 
         <div class="block-reponse">
